--- a/app/src/main/res/layout/edit_profile_dialog.xml
+++ b/app/src/main/res/layout/edit_profile_dialog.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/edit_dialog_shape"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
@@ -11,10 +10,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="@string/dialog_title"
-        android:textSize="25sp"
+        android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/edit_avatar_image"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <de.hdodenhof.circleimageview.CircleImageView
@@ -23,10 +22,10 @@
         android:layout_height="70dp"
         android:layout_marginTop="12dp"
         android:contentDescription="@string/image_desc"
-        app:layout_constraintBottom_toTopOf="@+id/edit_my_name"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:src="@drawable/ic_profile"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/edit_my_name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dialog_title" />
 
     <ImageView
@@ -36,17 +35,18 @@
         android:contentDescription="@string/image_desc"
         android:src="@drawable/ic_change_avatar"
         app:layout_constraintBottom_toBottomOf="@+id/edit_avatar_image"
-        app:layout_constraintRight_toRightOf="@+id/edit_avatar_image" />
+        app:layout_constraintEnd_toEndOf="@+id/edit_avatar_image" />
 
     <EditText
         android:id="@+id/edit_my_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textColorHint="@color/white"
+        android:layout_marginHorizontal="24dp"
         android:ems="10"
+        android:textColorHint="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/edit_line"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edit_avatar_image" />
 
     <View
@@ -56,22 +56,9 @@
         android:layout_marginTop="6dp"
         android:layout_marginBottom="8dp"
         android:background="@color/theme"
-        app:layout_constraintBottom_toTopOf="@+id/btn_ok"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/line_vertical_center"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edit_my_name" />
-
-    <TextView
-        android:id="@+id/btn_ok"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:text="@string/dialog_btn_ok"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/line_vertical_center"
-        app:layout_constraintTop_toBottomOf="@+id/edit_line" />
 
     <View
         android:id="@+id/line_vertical_center"
@@ -79,21 +66,34 @@
         android:layout_height="0dp"
         android:background="@color/theme"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/edit_line" />
+
+    <TextView
+        android:id="@+id/btn_ok"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="8dp"
+        android:text="@string/dialog_btn_ok"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/line_vertical_center"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edit_line" />
 
     <TextView
         android:id="@+id/btn_cancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_marginVertical="8dp"
         android:text="@string/dialog_btn_cancel"
         android:textColor="@color/white"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/line_vertical_center"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/line_vertical_center"
         app:layout_constraintTop_toBottomOf="@+id/edit_line" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
