--- a/app/src/main/res/layout/fragment_my_profile.xml
+++ b/app/src/main/res/layout/fragment_my_profile.xml
@@ -25,8 +25,8 @@
         android:textColor="@color/white"
         android:textSize="26sp"
         android:textStyle="italic"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/top_line" />
 
     <de.hdodenhof.circleimageview.CircleImageView
@@ -36,8 +36,8 @@
         android:layout_marginTop="8dp"
         android:contentDescription="@string/image_desc"
         android:src="@drawable/ic_profile"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/num_likes"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/profile_title" />
 
     <TextView
@@ -48,8 +48,8 @@
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/num_likes"
-        app:layout_constraintStart_toEndOf="@+id/avatar_img"
         app:layout_constraintEnd_toStartOf="@+id/btn_edit"
+        app:layout_constraintStart_toEndOf="@+id/avatar_img"
         app:layout_constraintTop_toTopOf="@+id/avatar_img" />
 
     <TextView
@@ -60,8 +60,8 @@
         android:textColor="@color/white"
         android:textSize="17sp"
         app:layout_constraintBottom_toBottomOf="@+id/avatar_img"
-        app:layout_constraintStart_toEndOf="@+id/avatar_img"
         app:layout_constraintEnd_toStartOf="@+id/btn_edit"
+        app:layout_constraintStart_toEndOf="@+id/avatar_img"
         app:layout_constraintTop_toBottomOf="@+id/my_name" />
 
     <Button
@@ -70,8 +70,8 @@
         android:layout_height="wrap_content"
         android:text="@string/text_button"
         app:layout_constraintBottom_toBottomOf="@+id/avatar_img"
-        app:layout_constraintStart_toEndOf="@+id/num_likes"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/num_likes"
         app:layout_constraintTop_toTopOf="@+id/avatar_img" />
 
     <View
@@ -92,8 +92,8 @@
         android:textColor="@color/white"
         android:textSize="25sp"
         android:textStyle="italic"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/medium_line" />
 
     <TextView
@@ -105,14 +105,15 @@
         android:textColor="@color/white"
         android:textSize="20sp"
         android:visibility="gone"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/favorite_title" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/favorite_recycler_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:paddingBottom="230dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/favorite_title" />
@@ -126,7 +127,6 @@
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/favorite_recycler_view" />
 
