--- a/app/src/main/res/layout/edit_profile_dialog.xml
+++ b/app/src/main/res/layout/edit_profile_dialog.xml
@@ -42,7 +42,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="24dp"
-        android:ems="10"
+        android:ems="8"
+        android:hint="@string/max_length_name"
+        android:maxLength="15"
+        android:maxLines="1"
         android:textColorHint="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/edit_line"
         app:layout_constraintEnd_toEndOf="parent"
