--- a/app/src/main/res/layout/edit_profile_dialog.xml
+++ b/app/src/main/res/layout/edit_profile_dialog.xml
@@ -11,13 +11,13 @@
         android:layout_marginTop="8dp"
         android:text="@string/dialog_title"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/edit_avatar_image"
+        app:layout_constraintBottom_toTopOf="@+id/edit_profile_image"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/edit_avatar_image"
+        android:id="@+id/edit_profile_image"
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:layout_marginTop="12dp"
@@ -34,8 +34,8 @@
         android:layout_height="20dp"
         android:contentDescription="@string/image_desc"
         android:src="@drawable/ic_change_avatar"
-        app:layout_constraintBottom_toBottomOf="@+id/edit_avatar_image"
-        app:layout_constraintEnd_toEndOf="@+id/edit_avatar_image" />
+        app:layout_constraintBottom_toBottomOf="@+id/edit_profile_image"
+        app:layout_constraintEnd_toEndOf="@+id/edit_profile_image" />
 
     <EditText
         android:id="@+id/edit_my_name"
@@ -50,7 +50,7 @@
         app:layout_constraintBottom_toTopOf="@+id/edit_line"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edit_avatar_image" />
+        app:layout_constraintTop_toBottomOf="@+id/edit_profile_image" />
 
     <View
         android:id="@+id/edit_line"
