--- a/app/src/main/res/layout/edit_profile_dialog.xml
+++ b/app/src/main/res/layout/edit_profile_dialog.xml
@@ -37,20 +37,27 @@
         app:layout_constraintBottom_toBottomOf="@+id/edit_profile_image"
         app:layout_constraintEnd_toEndOf="@+id/edit_profile_image" />
 
-    <EditText
+    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/edit_my_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="24dp"
-        android:ems="8"
-        android:hint="@string/max_length_name"
-        android:maxLength="15"
-        android:maxLines="1"
-        android:textColorHint="@color/white"
+        app:counterEnabled="true"
+        app:counterMaxLength="10"
+        app:errorEnabled="true"
         app:layout_constraintBottom_toTopOf="@+id/edit_line"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edit_profile_image" />
+        app:layout_constraintTop_toBottomOf="@+id/edit_profile_image">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/current_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/dialog_input_label"
+            android:inputType="text" />
+
+    </com.google.android.material.textfield.TextInputLayout>
 
     <View
         android:id="@+id/edit_line"
