パッケージの切り分け

--- a/app/src/main/res/layout/fragment_stream.xml
+++ b/app/src/main/res/layout/fragment_stream.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragments.StreamFragment">
+    tools:context=".ui.stream.StreamFragment">
 
     <View
         android:id="@+id/top_line"
