--- a/app/src/main/res/navigation/twitch_nav_graph.xml
+++ b/app/src/main/res/navigation/twitch_nav_graph.xml
@@ -7,19 +7,19 @@
 
     <custom_fragment
         android:id="@+id/stream"
-        android:name="com.example.twitchapp.ui.fragments.StreamFragment"
+        android:name="com.example.twitchapp.ui.stream.StreamFragment"
         android:label="fragment_stream"
         tools:layout="@layout/fragment_stream" />
 
     <custom_fragment
         android:id="@+id/clip"
-        android:name="com.example.twitchapp.ui.fragments.ClipFragment"
+        android:name="com.example.twitchapp.ui.clip.ClipFragment"
         android:label="fragment_game"
         tools:layout="@layout/fragment_clip" />
 
     <custom_fragment
         android:id="@+id/favorite"
-        android:name="com.example.twitchapp.ui.fragments.MyProfileFragment"
+        android:name="com.example.twitchapp.ui.myprofile.MyProfileFragment"
         android:label="fragment_favorite"
         tools:layout="@layout/fragment_my_profile" />
 
