--- a/app/src/main/res/layout/edit_profile_dialog.xml
+++ b/app/src/main/res/layout/edit_profile_dialog.xml
@@ -22,7 +22,7 @@
         android:layout_height="70dp"
         android:layout_marginTop="12dp"
         android:contentDescription="@string/image_desc"
-        android:src="@drawable/ic_profile"
+        android:src="@drawable/no_image"
         app:layout_constraintBottom_toTopOf="@+id/edit_my_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -51,7 +51,7 @@
         app:layout_constraintTop_toBottomOf="@+id/edit_profile_image">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/current_name"
+            android:id="@+id/dialog_profile_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/dialog_input_label"
