--- a/app/src/main/res/layout/fragment_my_profile.xml
+++ b/app/src/main/res/layout/fragment_my_profile.xml
@@ -30,18 +30,18 @@
         app:layout_constraintTop_toBottomOf="@+id/top_line" />
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/avatar_img"
+        android:id="@+id/my_profile_image"
         android:layout_width="58dp"
         android:layout_height="58dp"
         android:layout_marginTop="8dp"
         android:contentDescription="@string/image_desc"
-        android:src="@drawable/ic_profile"
+        android:src="@drawable/no_image"
         app:layout_constraintEnd_toStartOf="@id/num_likes"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/profile_title" />
 
     <TextView
-        android:id="@+id/my_name"
+        android:id="@+id/my_profile_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/no_name"
@@ -49,8 +49,8 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/num_likes"
         app:layout_constraintEnd_toStartOf="@+id/btn_edit"
-        app:layout_constraintStart_toEndOf="@+id/avatar_img"
-        app:layout_constraintTop_toTopOf="@+id/avatar_img" />
+        app:layout_constraintStart_toEndOf="@+id/my_profile_image"
+        app:layout_constraintTop_toTopOf="@+id/my_profile_image" />
 
     <TextView
         android:id="@+id/num_likes"
@@ -59,20 +59,20 @@
         android:text="@string/number_likes_default"
         android:textColor="@color/white"
         android:textSize="17sp"
-        app:layout_constraintBottom_toBottomOf="@+id/avatar_img"
+        app:layout_constraintBottom_toBottomOf="@+id/my_profile_image"
         app:layout_constraintEnd_toStartOf="@+id/btn_edit"
-        app:layout_constraintStart_toEndOf="@+id/avatar_img"
-        app:layout_constraintTop_toBottomOf="@+id/my_name" />
+        app:layout_constraintStart_toEndOf="@+id/my_profile_image"
+        app:layout_constraintTop_toBottomOf="@+id/my_profile_name" />
 
     <Button
         android:id="@+id/btn_edit"
         android:layout_width="60dp"
         android:layout_height="wrap_content"
         android:text="@string/text_button"
-        app:layout_constraintBottom_toBottomOf="@+id/avatar_img"
+        app:layout_constraintBottom_toBottomOf="@+id/my_profile_image"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/num_likes"
-        app:layout_constraintTop_toTopOf="@+id/avatar_img" />
+        app:layout_constraintTop_toTopOf="@+id/my_profile_image" />
 
     <View
         android:id="@+id/medium_line"
@@ -81,7 +81,7 @@
         android:layout_marginTop="10dp"
         android:background="@color/theme"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/avatar_img" />
+        app:layout_constraintTop_toBottomOf="@+id/my_profile_image" />
 
     <TextView
         android:id="@+id/favorite_title"
