--- a/app/src/main/res/layout/fragment_clip.xml
+++ b/app/src/main/res/layout/fragment_clip.xml
@@ -11,163 +11,16 @@
         android:layout_width="fill_parent"
         android:layout_height="2dp"
         android:background="@color/theme"
-        app:layout_constraintBottom_toTopOf="@+id/menu_game"
+        app:layout_constraintBottom_toTopOf="@+id/game_titles_topbar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <HorizontalScrollView
-        android:id="@+id/menu_game"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+    <include
+        android:id="@+id/game_titles_topbar"
+        layout="@layout/game_titles_topbar"
         app:layout_constraintBottom_toTopOf="@+id/medium_line"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/top_line">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <ImageView
-                android:id="@+id/game_icon"
-                android:layout_width="55dp"
-                android:layout_height="55dp"
-                android:layout_marginHorizontal="8dp"
-                android:layout_marginTop="12dp"
-                android:layout_marginBottom="4dp"
-                android:contentDescription="@string/image_desc"
-                android:src="@drawable/game_icon" />
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:layout_marginHorizontal="4dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="4dp"
-                app:cardCornerRadius="15dp">
-
-                <ImageView
-                    android:id="@+id/pubg_mobile"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:contentDescription="@string/image_desc"
-                    android:src="@drawable/pubg_mobile" />
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:layout_marginHorizontal="4dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="4dp"
-                app:cardCornerRadius="15dp">
-
-                <ImageView
-                    android:id="@+id/apex"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:contentDescription="@string/image_desc"
-                    android:src="@drawable/apex" />
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:layout_marginHorizontal="4dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="4dp"
-                app:cardCornerRadius="15dp">
-
-                <ImageView
-                    android:id="@+id/amongus"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:contentDescription="@string/image_desc"
-                    android:src="@drawable/among" />
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:layout_marginHorizontal="4dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="4dp"
-                app:cardCornerRadius="15dp">
-
-                <ImageView
-                    android:id="@+id/genshin"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:contentDescription="@string/image_desc"
-                    android:src="@drawable/genshin" />
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:layout_marginHorizontal="4dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="4dp"
-                app:cardCornerRadius="15dp">
-
-                <ImageView
-                    android:id="@+id/minecraft"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:contentDescription="@string/image_desc"
-                    android:src="@drawable/mine" />
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:layout_marginHorizontal="4dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="4dp"
-                app:cardCornerRadius="15dp">
-
-                <ImageView
-                    android:id="@+id/fortnite"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:contentDescription="@string/image_desc"
-                    android:src="@drawable/fortnite" />
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:layout_marginHorizontal="4dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="4dp"
-                app:cardCornerRadius="15dp">
-
-                <ImageView
-                    android:id="@+id/callofduty"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:contentDescription="@string/image_desc"
-                    android:src="@drawable/callofduty" />
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:layout_marginHorizontal="4dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="4dp"
-                app:cardCornerRadius="15dp">
-
-                <ImageView
-                    android:id="@+id/lol"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:contentDescription="@string/image_desc"
-                    android:src="@drawable/lol" />
-            </androidx.cardview.widget.CardView>
-
-        </LinearLayout>
-
-    </HorizontalScrollView>
+        app:layout_constraintTop_toBottomOf="@+id/top_line" />
 
     <View
         android:id="@+id/medium_line"
@@ -177,7 +30,7 @@
         android:layout_marginBottom="4dp"
         android:background="@color/theme"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/menu_game" />
+        app:layout_constraintTop_toBottomOf="@+id/game_titles_topbar" />
 
     <TextView
         android:id="@+id/clip_title"
