--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,8 +7,8 @@
     android:background="@color/black"
     tools:context=".ui.MainActivity">
 
-    <fragment
-        android:id="@+id/twichNavHostFragment"
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/twich_nav_host"
         android:name="com.example.twitchapp.util.CustomNavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
