--- a/app/src/main/res/layout/fragment_clip.xml
+++ b/app/src/main/res/layout/fragment_clip.xml
@@ -32,6 +32,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/game_titles_topbar" />
 
+    <ImageView
+        android:id="@+id/clip_icon"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginEnd="12dp"
+        android:contentDescription="@string/image_desc"
+        android:src="@drawable/ic_clip"
+        app:layout_constraintBottom_toBottomOf="@id/clip_title"
+        app:layout_constraintEnd_toStartOf="@id/clip_title"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/clip_title" />
+
     <TextView
         android:id="@+id/clip_title"
         android:layout_width="wrap_content"
@@ -42,7 +55,7 @@
         android:textSize="30sp"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@id/clip_icon"
         app:layout_constraintTop_toBottomOf="@+id/medium_line" />
 
     <View
