--- a/app/src/main/res/layout/fragment_stream.xml
+++ b/app/src/main/res/layout/fragment_stream.xml
@@ -14,6 +14,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageView
+        android:id="@+id/stream_icon"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginEnd="12dp"
+        android:contentDescription="@string/image_desc"
+        android:src="@drawable/ic_video"
+        app:layout_constraintBottom_toBottomOf="@id/stream_title"
+        app:layout_constraintEnd_toStartOf="@id/stream_title"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/stream_title" />
+
     <TextView
         android:id="@+id/stream_title"
         android:layout_width="wrap_content"
@@ -24,8 +37,8 @@
         android:textSize="30sp"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/top_line" />
+        app:layout_constraintStart_toEndOf="@id/stream_icon"
+        app:layout_constraintTop_toBottomOf="@id/top_line" />
 
     <View
         android:id="@+id/medium_line"
