--- a/app/src/main/res/layout/game_titles_topbar.xml
+++ b/app/src/main/res/layout/game_titles_topbar.xml
@@ -99,7 +99,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:contentDescription="@string/image_desc"
-                android:src="@drawable/mine" />
+                android:src="@drawable/minecraft" />
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
