--- a/app/src/main/res/layout/fragment_my_profile.xml
+++ b/app/src/main/res/layout/fragment_my_profile.xml
@@ -48,7 +48,7 @@
         android:layout_height="58dp"
         android:layout_marginTop="8dp"
         android:contentDescription="@string/image_desc"
-        android:src="@drawable/no_image"
+        android:src="@drawable/no_profile_image"
         app:layout_constraintEnd_toStartOf="@id/num_likes"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/profile_title" />
@@ -114,7 +114,6 @@
         android:id="@+id/favorite_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:text="@string/favorite_clips_title"
         android:textColor="@color/white"
         android:textSize="25sp"
@@ -133,6 +132,17 @@
         android:textSize="20sp"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/favorite_title" />
+
+    <View
+        android:id="@+id/bottom_line_item"
+        android:layout_width="fill_parent"
+        android:layout_height="2dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="4dp"
+        android:background="@color/theme"
+        app:layout_constraintBottom_toTopOf="@+id/favorite_recycler_view"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/favorite_title" />
 
