--- a/app/src/main/res/layout/item_favorite.xml
+++ b/app/src/main/res/layout/item_favorite.xml
@@ -34,26 +34,62 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/user_profile"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+        <RelativeLayout
+            android:id="@+id/thumbnail_card"
+            android:layout_width="80dp"
+            android:layout_height="60dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:contentDescription="@string/image_desc"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:cardCornerRadius="5dp">
+
+                <ImageView
+                    android:id="@+id/thumbnail"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:contentDescription="@string/image_desc" />
+
+            </androidx.cardview.widget.CardView>
+
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:contentDescription="@string/image_desc"
+                android:src="@drawable/ic_play"
+                app:tint="@color/theme" />
+
+        </RelativeLayout>
+
+        <ImageView
+            android:id="@+id/user_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:contentDescription="@string/image_desc"
+            android:src="@drawable/ic_profile"
+            app:layout_constraintBottom_toTopOf="@id/view_img"
+            app:layout_constraintStart_toEndOf="@+id/thumbnail_card"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:textColor="@color/white"
-            android:textSize="22sp"
-            app:layout_constraintBottom_toBottomOf="@id/user_profile"
-            app:layout_constraintStart_toEndOf="@+id/user_profile"
-            app:layout_constraintTop_toTopOf="@id/user_profile" />
+            android:layout_marginStart="8dp"
+            android:textColor="@color/gray"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="@id/user_icon"
+            app:layout_constraintStart_toEndOf="@+id/user_icon"
+            app:layout_constraintTop_toTopOf="@id/user_icon" />
 
         <ImageView
             android:id="@+id/view_img"
@@ -62,99 +98,37 @@
             android:layout_marginEnd="8dp"
             android:contentDescription="@string/image_desc"
             android:src="@drawable/ic_eye"
-            app:layout_constraintBottom_toBottomOf="@id/user_profile"
-            app:layout_constraintEnd_toStartOf="@+id/viewer"
-            app:layout_constraintTop_toTopOf="@id/user_profile" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/user_icon"
+            app:layout_constraintTop_toBottomOf="@id/user_icon" />
 
         <TextView
             android:id="@+id/viewer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
             android:layout_marginEnd="16dp"
-            android:text="100"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="@id/user_profile"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/user_profile" />
+            android:textColor="@color/gray"
+            android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="@id/view_img"
+            app:layout_constraintStart_toEndOf="@id/view_img"
+            app:layout_constraintTop_toTopOf="@id/view_img" />
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/thumbnail_card"
-            android:layout_width="280dp"
-            android:layout_height="160dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            app:cardCornerRadius="5dp"
-            app:layout_constraintBottom_toTopOf="@+id/game_name"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginEnd="12dp"
+            app:cardCornerRadius="15dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/user_profile"
-            app:layout_constraintTop_toBottomOf="@+id/user_profile">
+            app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
-                android:id="@+id/thumbnail"
-                android:layout_width="280dp"
-                android:layout_height="160dp"
+                android:id="@+id/game_image"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:contentDescription="@string/image_desc" />
-
         </androidx.cardview.widget.CardView>
-
-        <ImageView
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:contentDescription="@string/image_desc"
-            android:src="@drawable/ic_play"
-            app:layout_constraintBottom_toBottomOf="@+id/thumbnail_card"
-            app:layout_constraintEnd_toEndOf="@+id/thumbnail_card"
-            app:layout_constraintStart_toStartOf="@+id/thumbnail_card"
-            app:layout_constraintTop_toTopOf="@+id/thumbnail_card" />
-
-        <ImageView
-            android:id="@+id/lang_icon"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_marginEnd="6dp"
-            android:contentDescription="@string/image_desc"
-            android:src="@drawable/ic_language"
-            app:layout_constraintBottom_toBottomOf="@+id/game_name"
-            app:layout_constraintEnd_toStartOf="@+id/lang"
-            app:layout_constraintTop_toTopOf="@+id/game_name"
-
-            />
-
-        <TextView
-            android:id="@+id/lang"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:text="En"
-            android:textColor="@color/white"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@id/game_name"
-            app:layout_constraintEnd_toStartOf="@+id/game_title_icon"
-            app:layout_constraintTop_toTopOf="@+id/game_name" />
-
-        <ImageView
-            android:id="@+id/game_title_icon"
-            android:layout_width="22dp"
-            android:layout_height="22dp"
-            android:layout_marginEnd="6dp"
-            android:contentDescription="@string/image_desc"
-            android:src="@drawable/game_icon"
-            app:layout_constraintBottom_toBottomOf="@id/game_name"
-            app:layout_constraintEnd_toStartOf="@id/game_name"
-            app:layout_constraintTop_toTopOf="@id/game_name" />
-
-        <TextView
-            android:id="@+id/game_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
-            android:text="PUBG Mobile"
-            android:textColor="@color/white"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/bottom_line_item"
-            app:layout_constraintEnd_toEndOf="parent" />
 
         <View
             android:id="@+id/bottom_line_item"
