--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="theme">#1aa1ff</color>
+    <color name="gray">#DBDADA</color>
+    <color name="theme">#1AA1FF</color>
 </resources>
