ダイアログのタップイベント実装

--- a/app/src/main/res/layout/custom_bottom_sheet_dialog.xml
+++ b/app/src/main/res/layout/custom_bottom_sheet_dialog.xml
@@ -115,7 +115,7 @@
         android:text="@string/dialog_back"
         android:textColor="@color/white"
         android:visibility="visible"
-        app:drawableStartCompat="@drawable/ic_back" />
+        app:drawableStartCompat="@drawable/ic_close" />
 
     <View
         android:layout_width="fill_parent"
