--- a/app/src/main/res/layout/fragment_clip.xml
+++ b/app/src/main/res/layout/fragment_clip.xml
@@ -39,30 +39,41 @@
         android:layout_marginEnd="12dp"
         android:contentDescription="@string/image_desc"
         android:src="@drawable/ic_clip"
-        app:layout_constraintBottom_toBottomOf="@id/clip_title"
+        app:layout_constraintBottom_toBottomOf="@id/title_bottom_line"
         app:layout_constraintEnd_toStartOf="@id/clip_title"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/clip_title" />
+        app:layout_constraintTop_toTopOf="@id/medium_line" />
 
     <TextView
         android:id="@+id/clip_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="2dp"
         android:text="@string/clip_fragment_title"
         android:textColor="@color/white"
-        android:textSize="30sp"
+        android:textSize="28sp"
         android:textStyle="italic"
+        app:layout_constraintBottom_toTopOf="@id/title_bottom_line"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/clip_icon"
         app:layout_constraintTop_toBottomOf="@+id/medium_line" />
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/fetch_game_icon"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginEnd="8dp"
+        android:src="@drawable/game_icon"
+        app:layout_constraintBottom_toBottomOf="@+id/title_bottom_line"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/medium_line" />
 
     <View
         android:id="@+id/title_bottom_line"
         android:layout_width="fill_parent"
         android:layout_height="2dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="2dp"
         android:background="@color/theme"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/clip_title" />
